--- a/TwitterTest/.project
+++ b/TwitterTest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TwitterTest</name>
+	<name>com.logikdev.twittertest</name>
 	<comment></comment>
 	<projects>
 	</projects>
